--- a/benthos.yaml
+++ b/benthos.yaml
@@ -5,12 +5,12 @@ input:
     targetAMS: '5.3.69.134.1.1'                  
     port: 801                  
     hostAMS: '192.168.56.1.1.1'         
-    readType: 'notification'             
+    readType: 'interval'             
     cycleTime: 10
     maxDelay: 0
     timeout: 10
     symbols:               # List of addresses to read from
-      - "MAIN.speedos"     # Accesses a
+      - "MAIN.MYBOOL"     # Accesses a
 
 
 pipeline:
